Fix multiline messages alignment. Update README with latest features.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,7 +154,7 @@ table {
 }
 
 .author {
-  margin-left: 35px;
+  margin-left: 55px;
 }
 
 input, textarea {
